Update pomfile to actually run tests